# codex_test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: multi_syllable_rhyme_plan.md  phoneme_reference.txt  syllable_pattern_guide.md  tasklist.md
src/poetry_assistant/: __init__.py  cli.py  database.py  ingest.py  models.py  phonetics.py  rhymes.py  search.py  syllables.py
tests/: _bootstrap.py  conftest.py  test_cli.py  test_ingest.py  test_phonetics.py  test_rhymes.py  test_search.py  test_syllables.py
